# OpenGL-C-Template

./: CMakeLists.txt  LICENSE  README.md  setup.sh
src/: main.c
src/Sources/: main.c
